--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower": "^1.7.9",
     "chalk": "^1.1.3",
     "cookie-parser": "^1.4.3",
+    "body-parser": "^1.12.0",
     "express": "^4.13.4",
     "lodash": "^4.14.0",
     "morgan": "^1.7.0",
