--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "server/app.js",
   "dependencies": {
     "angular-chart.js": "^1.0.2",
+    "body-parser": "^1.12.0",
     "bower": "^1.7.9",
     "chalk": "^1.1.3",
+    "chartjs": "^0.3.24",
     "cookie-parser": "^1.4.3",
-    "body-parser": "^1.12.0",
     "express": "^4.13.4",
     "lodash": "^4.14.0",
     "morgan": "^1.7.0",
