--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "angular-chart.js": "^1.0.2",
     "body-parser": "^1.12.0",
     "bower": "^1.7.9",
-    "chalk": "^1.1.3",
-    "chartjs": "^0.3.24",
+    "chalk": "^1.1.3",    
+    "chart.js": "2.x",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "lodash": "^4.14.0",
