--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "ng-knob": "^0.1.3",
     "auth0-lock": "^10.2.1",
     "angular-lock": "^1.0.1",
-    "angular-jwt": "^0.1.3"
+    "angular-jwt": "^0.1.3",
+    "angular-file-upload": "~2.3.4"
   },
   "devDependencies": {
     "angular-route": "~1.5.6",
