--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "server/app.js",
   "dependencies": {
     "angular-chart.js": "^1.0.2",
-    "body-parser": "^1.12.0",
+    "body-parser": "^1.15.2",
     "bower": "^1.7.9",
-    "chalk": "^1.1.3",    
+    "busboy": "^0.2.13",
+    "chalk": "^1.1.3",
     "chart.js": "2.x",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "lodash": "^4.14.0",
     "morgan": "^1.7.0",
+    "ng-file-upload": "^12.2.9",
     "path": "^0.12.7",
     "request": "^2.74.0",
+    "watson-developer-cloud": "^2.4.0",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
